--- a/light-dark-mode-digital-clock/package.json
+++ b/light-dark-mode-digital-clock/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kodeiva.github.io/Light-dark-mode-digital-clock/light-dark-mode-digital-clock/",
+  "homepage": "https://kodeiva.github.io/Light-dark-mode-digital-clock/",
   "name": "light-dark-mode-digital-clock",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
